修改目录结构

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>导航菜单组件</title>
-	<link rel="stylesheet" href="menu.css"/>
+	<link rel="stylesheet" href="./src/css/menu.css"/>
 </head>
 <body>
 	
@@ -23,8 +23,8 @@
 		</ul>
 	</div>
 
-<script src="../dep/jquery-1.12.2.min.js"></script>
-<script src="menu.js"></script>
+<script src="./dep/jquery-1.12.2.min.js"></script>
+<script src="./src/js/menu.js"></script>
 <script>
 	$('.nav-menu').menu({
 		itemWidth: 30
