--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<title>导航菜单组件</title>
 	<link rel="stylesheet" href="./src/css/menu.css"/>
 </head>
@@ -24,11 +25,14 @@
 	</div>
 
 <script src="./dep/jquery-1.12.2.min.js"></script>
+<script src="./dep/fastclick.js"></script>
 <script src="./src/js/menu.js"></script>
 <script>
-	$('.nav-menu').menu({
-		itemWidth: 30
-	});
+	$(function() {
+		$('.nav-menu').menu({
+			itemWidth: 30
+		});
+	})
 </script>
 </body>
 </html>
