--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<title>导航菜单组件</title>
-	<link rel="stylesheet" href="./src/css/menu.css"/>
+	<link rel="stylesheet" href="./src/menu.css"/>
 </head>
 <body>
 	
@@ -26,11 +26,12 @@
 
 <script src="./dep/jquery-1.12.2.min.js"></script>
 <script src="./dep/fastclick.js"></script>
-<script src="./src/js/menu.js"></script>
+<script src="./src/menu.js"></script>
 <script>
 	$(function() {
 		$('.nav-menu').menu({
-			itemWidth: 30
+			itemWidth: 30,
+			itemMargin: 0
 		});
 	})
 </script>
