支持响应式布局

--- a/demo.html
+++ b/demo.html
@@ -8,28 +8,28 @@
 </head>
 <body>
 	
-	<div class="nav-menu">     
-		<ul>
+	<div class="ve-menu">     
+		<ul class="ve-menu-pc">
 			<li><a href="#">link</a></li>
-			<li><a href="#">link</a>
+			<li><a href="#">lindk</a>
 				<ul>  
-					<li><a href="#">aaaaa</a></li>
-					<li><a href="#">bbbbb</a></li>
-					<li><a href="#">ccccc</a></li> 
+					<li><a href="#aa">aaaaa</a></li>
+					<li><a href="#bb">bbbbb</a></li>
+					<li><a href="#cc">ccccc</a></li> 
 				</ul> 
 			</li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+			<li><a href="#">liank</a></li>
+			<li><a href="#">linck</a></li>
+			<li><a href="#">livnk</a></li>
 		</ul>
 	</div>
 
 <script src="./dep/jquery-1.12.2.min.js"></script>
-<script src="./dep/fastclick.js"></script>
+<!-- <script src="./dep/fastclick.js"></script> -->
 <script src="./src/menu.js"></script>
 <script>
 	$(function() {
-		$('.nav-menu').menu({
+		$('.ve-menu').menu({
 			itemWidth: 30,
 			itemMargin: 0
 		});
