添加移动端菜单属性

--- a/demo.html
+++ b/demo.html
@@ -25,7 +25,7 @@
 	</div>
 
 <script src="./dep/jquery-1.12.2.min.js"></script>
-<!-- <script src="./dep/fastclick.js"></script> -->
+<script src="./dep/fastclick.js"></script>
 <script src="./src/menu.js"></script>
 <script>
 	$(function() {
