--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
 
 <script src="./dep/jquery-1.12.2.min.js"></script>
 <script src="./dep/fastclick.js"></script>
-<script src="./src/menu.js"></script>
+<script src="./src/menu.min.js"></script>
 <script>
 	$(function() {
 		$('.ve-menu').menu({
