动画效果debug、优化，添加slide动效

--- a/demo.html
+++ b/demo.html
@@ -32,13 +32,13 @@
     </div>
     <script src="./dep/jquery-1.12.2.min.js"></script>
     <script src="./dep/fastclick.js"></script>
-    <script src="./src/menu.min.js"></script>
+    <script src="./src/menu.js"></script>
     <script>
     $(function() {
         $('.ve-menu').menu({
             itemWidth: 30,
             itemMargin: 0,
-            // animate: 'fade'
+            animate: 'fade'
         });
     })
     </script>
