--- a/demo.html
+++ b/demo.html
@@ -38,7 +38,7 @@
         $('.ve-menu').menu({
             itemWidth: 30,
             itemMargin: 0,
-            animate: 'fade'
+            animate: 'slide'
         });
     })
     </script>
