【修改】--  配置项参数名

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
     <script>
         $('.ve-menu').menu({
-            firstFontSize: 14,
-            firstFontColor: '#333',
-            firstBgColor: '#fff', 
-            firstHoverFontColor: '#2e76ef',
-            firstHoverBgColor: '#fff',
-            itemMargin: 5,
-            secondFontSize: 14,
+            fontSize: 14,
+            fontColor: '#333',
+            bgColor: '#fff', 
+            hoverFontColor: '#2e76ef',
+            hoverBgColor: '#fff',
+            itemSpace: 5,
+            subFontSize: 14,
             itemWidth: 40,
             animate: 'slide',
             speed: 500
