--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test Menu.js</title>
     <!-- Menu.js 样式 -->
-    <link rel="stylesheet" href="./dist/menu.min.css">
+    <link rel="stylesheet" href="./src/menu.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <script src="./lib/jquery-1.12.2.min.js"></script>
     <script src="./lib/fastclick.js"></script>
     <!-- Menu.js 脚本 -->
-    <script src="./dist/menu.min.js"></script>
+    <script src="./src/menu.js"></script>
 
     <script>
         $('.ve-menu').menu({
@@ -42,6 +42,7 @@
             hoverBgColor: '#fff',
             itemSpace: 5,
             subFontSize: 14,
+            subHoverBgColor: '#666',
             itemWidth: 40,
             animate: 'slide',
             speed: 500,
